--- a/dTVTerminalApp/app/src/main/res/layout/other/layout/remote_controller_channel_ui_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/other/layout/remote_controller_channel_ui_layout.xml
@@ -342,6 +342,8 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
                 android:src="@mipmap/remote_ch_btn_ch_vertical_text"
                 android:contentDescription="@null"
                 android:layout_centerInParent="true"/>
