--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/tutorial_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/tutorial_main_layout.xml
@@ -25,5 +25,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="#FFFFFF"
-        android:text="スキップ" />
+        android:text="@string/str_tutorial_skip" />
 </LinearLayout>
