DREM-1516[DREM-61]ワーディング適用(リスト関連)
Change-Id: Ic6f9b863be3e7aca5b0eed30982ef453be2c3880

--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/clip_list_main.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/clip_list_main.xml
@@ -16,4 +16,15 @@
         android:layout_height="match_parent"
         android:layout_below="@id/rl_clip_list_tab" />
 
+    <TextView
+        android:id="@+id/clip_list_no_items"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/search_tab_margin_left"
+        android:layout_below="@+id/rl_clip_list_tab"
+        android:textColor="@color/white_text"
+        android:textSize="@dimen/tab_text_size_14dp"
+        android:text="@string/str_clip_list_no_content"
+        android:visibility="gone"/>
+
 </RelativeLayout>
