--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/record_reservation_list_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/record_reservation_list_main_layout.xml
@@ -37,6 +37,16 @@
         android:layout_marginTop="@dimen/top_divider_margin_top"
         />
 
+    <TextView
+        android:id="@+id/record_reservation_list_no_items"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/search_tab_margin_left"
+        android:textColor="@color/white_text"
+        android:textSize="@dimen/tab_text_size_14dp"
+        android:text="@string/common_empty_data_message"
+        android:visibility="gone"/>
+
     <ListView
         android:id="@+id/record_reservation_list_view"
         android:divider="@drawable/list_item_divider"
