--- a/dTVTerminalApp/app/src/main/res/layout/ranking/layout/weekly_tv_ranking_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/ranking/layout/weekly_tv_ranking_main_layout.xml
@@ -12,6 +12,17 @@
         android:layout_height="@dimen/tab_layout_area_height"
         android:visibility="visible" />
 
+    <TextView
+        android:id="@+id/weekly_ranking_no_items"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/search_tab_margin_left"
+        android:layout_below="@+id/rl_weekly_ranking_tab"
+        android:textColor="@color/white_text"
+        android:textSize="@dimen/tab_text_size_14dp"
+        android:text="@string/common_empty_data_message"
+        android:visibility="gone"/>
+
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_weekly_ranking_result"
         android:layout_width="match_parent"
