--- a/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/channel_list_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/channel_list_main_layout.xml
@@ -11,6 +11,17 @@
 		android:background="@color/channel_list_tab_background_color"
 		android:visibility="visible" />
 
+	<TextView
+		android:id="@+id/channel_list_no_items"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginStart="@dimen/search_tab_margin_left"
+		android:layout_below="@+id/rl_channel_list_tab"
+		android:textColor="@color/white_text"
+		android:textSize="@dimen/tab_text_size_14dp"
+		android:text="@string/common_empty_data_message"
+		android:visibility="gone"/>
+
 	<android.support.v4.view.ViewPager
 		android:id="@+id/channel_list_main_layout_channel_body_vp"
 		android:layout_width="match_parent"
