--- a/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/tv_program_list_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/tv_program_list_main_layout.xml
@@ -83,6 +83,16 @@
     </RelativeLayout>
 
     <TextView
+        android:id="@+id/tv_program_list_no_items"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+		android:layout_marginStart="@dimen/search_tab_margin_left"
+        android:textColor="@color/white_text"
+        android:textSize="@dimen/tab_text_size_14dp"
+        android:text="@string/common_empty_data_message"
+        android:visibility="gone"/>
+
+    <TextView
         android:id="@+id/tv_program_list_main_layout_tip_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
