DREM-1923[DREM-61]ワーディング適用)エラーポリシー(リスト関連) & DREM-1907[実装]([DREM-1778]レイアウト適（2018/03/01版）)実装(リスト0件対応)
Change-Id: Ie1fb69958bac7fa7956eaea2af6ac93111059f94

--- a/dTVTerminalApp/app/src/main/res/layout/other/layout/premium_video_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/other/layout/premium_video_main_layout.xml
@@ -28,7 +28,8 @@
         android:id="@+id/premium_video_list_no_items"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/search_tab_margin_left"
+        android:layout_marginStart="@dimen/list_no_items_text_left"
+        android:layout_marginTop="@dimen/list_no_items_text_top"
         android:textColor="@color/white_text"
         android:textSize="@dimen/tab_text_size_14dp"
         android:text="@string/common_empty_data_message"
