--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/clip_list_main.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/clip_list_main.xml
@@ -20,7 +20,8 @@
         android:id="@+id/clip_list_no_items"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/search_tab_margin_left"
+        android:layout_marginStart="@dimen/list_no_items_text_left"
+        android:layout_marginTop="@dimen/list_no_items_text_top"
         android:layout_below="@+id/rl_clip_list_tab"
         android:textColor="@color/white_text"
         android:textSize="@dimen/tab_text_size_14dp"
