--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/recommend_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/recommend_main_layout.xml
@@ -6,7 +6,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000">
+    android:background="@color/common_tab_background_color">
 
     <RelativeLayout
         android:id="@+id/rl_recommend_tab"
@@ -15,23 +15,23 @@
         android:background="@color/common_tab_background_color"
         android:visibility="visible" />
 
+    <TextView
+        android:id="@+id/recommend_list_no_items"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/list_no_items_text_left"
+        android:layout_marginTop="@dimen/list_no_items_text_top"
+        android:textColor="@color/white_text"
+        android:textSize="@dimen/tab_text_size_14dp"
+        android:text="@string/common_empty_data_message"
+        android:visibility="gone"/>
+
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_recommend_list_items"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true" />
-
-    <TextView
-        android:id="@+id/recommend_list_no_items"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/search_tab_margin_left"
-        android:layout_below="@+id/rl_recommend_tab"
-        android:textColor="@color/white_text"
-        android:textSize="@dimen/tab_text_size_14dp"
-        android:text="@string/common_empty_data_message"
-        android:visibility="gone"/>
 
     <View
         android:layout_width="match_parent"
