--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -243,6 +243,8 @@
     <dimen name="tab_scroll_area_padding_top">20dp</dimen>
     <dimen name="search_tab_scroll_area_padding_top">21dp</dimen>
     <dimen name="tab_indicator_size">1dp</dimen>
+    <dimen name="list_no_items_text_left">16dp</dimen>
+    <dimen name="list_no_items_text_top">24dp</dimen>
 
     <!--設定画面-->
     <dimen name="main_setting_text_start_margin">16dp</dimen>
