--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/record_list_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/record_list_main_layout.xml
@@ -16,8 +16,8 @@
         android:id="@+id/recorded_list_no_items"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/search_tab_margin_left"
-        android:layout_below="@+id/rl_recorded_list_tab"
+        android:layout_marginStart="@dimen/list_no_items_text_left"
+        android:layout_marginTop="@dimen/list_no_items_text_top"
         android:textColor="@color/white_text"
         android:background="@color/common_tab_background_color"
         android:textSize="@dimen/tab_text_size_14dp"
