--- a/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/channel_list_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/channel_list_main_layout.xml
@@ -15,8 +15,9 @@
 		android:id="@+id/channel_list_no_items"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginStart="@dimen/search_tab_margin_left"
-		android:layout_below="@+id/rl_channel_list_tab"
+		android:layout_marginStart="@dimen/list_no_items_text_left"
+		android:layout_marginTop="@dimen/list_no_items_text_top"
+		android:layout_below="@id/rl_channel_list_tab"
 		android:textColor="@color/white_text"
 		android:textSize="@dimen/tab_text_size_14dp"
 		android:text="@string/common_empty_data_message"
