DREM-1778 レイアウト適用（2018/03/01版）
dRM-15-001：リモコン
・IPTVボタン→専門chボタン
　アイコン差し替え
　キーコード名の変更
・鍵マークの削除
　アイコンの削除
・電源ボタンの位置等の調整
　左側の位置修正

Change-Id: I5802fcf99bd9b8841ddada715333b68b82488279

--- a/dTVTerminalApp/app/src/main/res/layout/other/layout/remote_controller_channel_ui_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/other/layout/remote_controller_channel_ui_layout.xml
@@ -49,11 +49,11 @@
             android:layout_weight="12" />
 
         <Button
-            android:id="@+id/remote_controller_bt_iptv"
+            android:id="@+id/remote_controller_bt_specialtychannel"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="96"
-            android:background="@mipmap/remote_ch_btn_iptv" />
+            android:background="@mipmap/remote_ch_btn_specialtychannel" />
 
         <TextView
             android:layout_width="0dp"
@@ -302,8 +302,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="40"
-            android:contentDescription="@null"
-            android:src="@mipmap/remote_ch_icon_ch_12" />
+            android:contentDescription="@null"/>
 
         <TextView
             android:layout_width="0dp"
