DREM-1908 [実装]([DREM-1778]レイアウト適（2018/03/01版）)実装(録画番組)
ランキングトップ画面のワーディング適用＋不要なページング処理削除

Change-Id: Ic4d8764f7b31b456ce88d01b31cdbfdd121151f4

--- a/dTVTerminalApp/app/src/main/res/layout/ranking/layout/ranking_top_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/ranking/layout/ranking_top_main_layout.xml
@@ -4,10 +4,26 @@
     android:layout_height="match_parent"
     android:background="#000000"
     android:orientation="vertical">
+
+    <RelativeLayout
+        android:id="@+id/ranking_top_layout_progress_bar_Layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone">
+
+        <ProgressBar
+            android:id="@+id/base_progress"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true" />
+    </RelativeLayout>
+
     <ScrollView
         android:background="#FF0000"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:visibility="visible">
         <LinearLayout
             android:id="@+id/ranking_top_main_layout_linearLayout"
             android:layout_width="match_parent"
