--- a/dTVTerminalApp/app/src/main/res/layout/ranking/layout/fragment_ranking_content.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/ranking/layout/fragment_ranking_content.xml
@@ -5,13 +5,29 @@
     android:layout_height="match_parent"
     android:background="@color/recommend_list_background">
 
+    <RelativeLayout
+        android:id="@+id/lv_ranking_progress"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="true"
+        android:visibility="gone">
+
+        <ProgressBar
+            android:id="@+id/base_progress"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true" />
+    </RelativeLayout>
+
     <ListView
         android:id="@+id/lv_ranking_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@drawable/list_item_divider"
         android:dividerHeight="@dimen/channel_list_divider_height"
-        android:listSelector="@drawable/channel_list_item_selector">
+        android:listSelector="@drawable/channel_list_item_selector"
+        android:visibility="visible">
 
     </ListView>
 
