DREM-1908 [実装]([DREM-1778]レイアウト適（2018/03/01版）)実装(録画番組)
おすすめ画面のレイアウト適用

Change-Id: I250242af190506b0f39b4bb41314ae7db2bc38d7

--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/fragment_recommend_content.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/fragment_recommend_content.xml
@@ -8,6 +8,21 @@
                 android:layout_height="match_parent"
 				android:background="@color/recommend_list_background">
 
+	<RelativeLayout
+		android:id="@+id/lv_recommend_progress"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:clickable="true"
+		android:visibility="gone">
+
+		<ProgressBar
+			android:id="@+id/base_progress"
+			style="?android:attr/progressBarStyle"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_centerInParent="true" />
+	</RelativeLayout>
+
 	<!-- 例外防止リストビュー -->
 	<com.nttdocomo.android.tvterminalapp.view.RecommendListView
 		android:id="@+id/lv_recommend_list"
