DREM-1910 [実装]([DREM-1778]レイアウト適（2018/03/01版）)実装(番組表)
以下を変更しました
・過去番組の背景色#000000→#121212に
　放送終了見逃し配信なし番組の背景色を追加
　<color name="program_missed_gray">#121212</color>

・クリップアイコンを変更
　初期状態：icon_circle_normal_clip_schedule_end.png
　クリップ済み：icon_circle_normal_clip_schedule_end.png
　未クリップ：icon_circle_active_clip_schedule_end
　タップ中：icon_tap_circle_active_clip_schedule_end

Change-Id: I3c98817d6d73b2a089d1339ae80d4835442988f8

--- a/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/tv_program_item_panel.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/tv_program_item_panel.xml
@@ -32,7 +32,7 @@
 			android:clickable="true"
 			android:contentDescription="@null"
 			android:scaleType="fitCenter"
-			android:src="@mipmap/icon_circle_opacity_clip"/>
+			android:background="@drawable/tv_program_schedule_clip_selector"/>
 	</RelativeLayout>
 
 	<RelativeLayout
