--- a/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/channel_list_content.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/channel_list_content.xml
@@ -7,6 +7,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+	<RelativeLayout
+		android:id="@+id/channel_list_progress"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:clickable="true"
+		android:visibility="gone">
+
+		<ProgressBar
+			android:id="@+id/base_progress"
+			style="?android:attr/progressBarStyle"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_centerInParent="true" />
+	</RelativeLayout>
+
 	<ListView
 		android:id="@+id/channel_list_content_body_lv"
 		android:layout_width="match_parent"
