--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/video_genre_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/video_genre_main_layout.xml
@@ -6,6 +6,21 @@
     android:layout_height="match_parent"
     android:background="@color/ranking_list_background">
 
+    <RelativeLayout
+        android:id="@+id/genre_progress"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="true"
+        android:visibility="gone">
+
+        <ProgressBar
+            android:id="@+id/base_progress"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true" />
+    </RelativeLayout>
+
     <ListView
         android:id="@+id/genre_list"
         android:layout_width="match_parent"
