--- a/dTVTerminalApp/app/src/main/res/layout/search/layout/fragment_televi_content.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/search/layout/fragment_televi_content.xml
@@ -36,6 +36,21 @@
 		android:textSize="@dimen/tab_text_size_14dp"
 		android:visibility="gone" />
 
+	<RelativeLayout
+		android:id="@+id/lv_searched_progress"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:clickable="true"
+		android:visibility="gone">
+
+		<ProgressBar
+			android:id="@+id/base_progress"
+			style="?android:attr/progressBarStyle"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_centerInParent="true" />
+	</RelativeLayout>
+
 	<ListView
 		android:id="@+id/lv_searched_result"
 		android:layout_width="match_parent"
