--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_fragment.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_fragment.xml
@@ -96,7 +96,7 @@
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true">
 
-                    <ImageButton
+                    <ImageView
                         android:id="@+id/dtv_contents_detail_fragment_rec_iv"
                         android:layout_width="@dimen/contents_detail_icon_size"
                         android:layout_height="@dimen/contents_detail_icon_size"
