--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout_recyclerview_item.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout_recyclerview_item.xml
@@ -21,7 +21,7 @@
         android:layout_height="@dimen/home_contents_thumbnail_new_label_height"
         android:layout_marginStart="@dimen/home_contents_thumbnail_new_label_margin_left"
         android:layout_marginTop="@dimen/home_contents_thumbnail_new_label_margin_top"
-        android:src="@drawable/label_status_new"
+        android:src="@mipmap/label_status_new"
         android:visibility="gone"
         android:contentDescription="@null"/>
 
