コンテンツ詳細画面の「見逃し」文字の色を修正しました
Change-Id: Ic0fbdf47efabf6045c418eef44df0545f69e8793

--- a/dTVTerminalApp/app/src/main/res/values/colors.xml
+++ b/dTVTerminalApp/app/src/main/res/values/colors.xml
@@ -90,6 +90,7 @@
     <color name="contents_detail_schedule_detail_sub_title">#ffffff</color>
     <color name="contents_detail_schedule_detail_schedule_info">#cccccc</color>
     <color name="contents_detail_channel_line_color">#333333</color>
+    <color name="contents_detail_video_miss_color">#ffbb4e</color>
     <!--録画番組一覧-->
     <color name="recorded_background">#000000</color>
     <color name="recorded_contents_background">#222222</color>
