--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/launch_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/launch_main_layout.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     style="@style/default_layout_style"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#CC0033">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="40dp"
-        android:text="Splash,チュートリアル,利用規約等は現時点未実装のためこれはダミーの画面です."
-        android:textColor="#FFFFFF"/>
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:background="@mipmap/logo_splash" />
 
-</LinearLayout>
+</RelativeLayout>
