DREM-2151[実装](コンテンツ配信期限の表示)検レコ_実装（一覧系）
Change-Id: Id3f577545db13177de5dced3973777cb214d2bee

--- a/dTVTerminalApp/app/src/main/res/values/colors.xml
+++ b/dTVTerminalApp/app/src/main/res/values/colors.xml
@@ -55,7 +55,7 @@
     <!-- おすすめ一覧 -->
     <color name="recommend_list_background">#222222</color>
     <color name="recommend_list_text">#FFFFFF</color>
-    <color name="recommend_list_now_on_air">#FF8800</color>
+    <color name="recommend_list_now_on_air">#ffbb4e</color>
     <!-- ランキング一覧 -->
     <color name="ranking_list_background">#222222</color>
     <color name="ranking_list_border">#888888</color>
