--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -333,7 +333,7 @@
     <dimen name="search_result_count_text_margin_buttom">10dp</dimen>
     <dimen name="search_result_count_text_margin_left">16dp</dimen>
     <dimen name="search_result_count_text_margin_right">0dp</dimen>
-    <dimen name="search_result_count_text_size">14sp</dimen>
+    <dimen name="search_result_count_text_size">14dp</dimen>
 
     <!-- おすすめ番組・ビデオ -->
     <dimen name="recommend_list_0dp">0dp</dimen>
