https://agile.apccloud.jp/jira/browse/DREM-2126
[対応要否検討][不具合対応] 詳細画面で情報取得中に×ボタンが押せない

Change-Id: Ie7a09333fda6faf99c575f39e0100953973aab8c

--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/activity_base.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/activity_base.xml
@@ -9,15 +9,19 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <!-- 実際にビューがaddされる親ビュー -->
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/base_ll"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:background="@color/header_background_color_red">
+            <!-- ヘッダー -->
             <include
                 android:id="@+id/base_title"
                 layout="@layout/header_layout" />
+            <!-- コンテンツビューが配置される場所 -->
+
         </LinearLayout>
 
         <RelativeLayout
@@ -37,6 +41,7 @@
                 layout="@layout/remote_control_main_layout" />
         </RelativeLayout>
 
+        <!-- プログレスバー -->
         <RelativeLayout
             android:id="@+id/base_progress_rl"
             android:layout_width="match_parent"
