--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_channel_fragment.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_channel_fragment.xml
@@ -4,7 +4,8 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/common_background_color">
 
     <ListView
         android:id="@+id/dtv_contents_channel_list"
