--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout_recyclerview_item.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout_recyclerview_item.xml
@@ -90,6 +90,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/home_item_contents_text_color"
-            android:textSize="@dimen/home_contents_thumbnail_state_text_size" />
+            android:textSize="@dimen/home_contents_thumbnail_state_text_size"
+            android:maxLines="2"
+            android:ellipsize="end"/>
     </LinearLayout>
 </RelativeLayout>
