DREM-1775 スプラッシュ画面作成
Change-Id: I8dea9ecdd80d9f06742ec78e31ac17c0c656df2e

--- a/dTVTerminalApp/app/src/main/res/values/colors.xml
+++ b/dTVTerminalApp/app/src/main/res/values/colors.xml
@@ -31,6 +31,8 @@
     <color name="common_tab_indicating_color">#FFFFFF</color>
     <color name="common_background_color">#1d1d1d</color>
 
+    <!--スプラッシュ画面-->
+    <color name="launch_background_color_red">#cc0033</color>
     <!--Home画面-->
     <color name="home_main_background_color">#1d1d1d</color>
     <color name="home_no_contract_info_background_color">#ffffff</color>
