--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/launch_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/launch_main_layout.xml
@@ -4,7 +4,7 @@
     style="@style/default_layout_style"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#CC0033">
+    android:background="@color/launch_background_color_red">
 
     <ImageView
         android:id="@+id/imageView"
@@ -13,5 +13,14 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:background="@mipmap/logo_splash" />
+
+    <ProgressBar
+        android:id="@+id/launch_progress"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageView"
+        android:layout_centerHorizontal="true"
+        android:visibility="gone" />
 
 </RelativeLayout>
