https://agile.apccloud.jp/jira/browse/DREM-2470
[実装](素材・レイアウトの最新化)レイアウト変更（一覧）

チャンネル名表示2行化
番組表のチャンネル名
マイ番組表編集メニューのチャンネル名
マイ番組表編集のチャンネルリストのチャンネル名
チャンネルリストのチャンネル名
コンテンツ詳細のチャンネルタブに表示するチャンネル名

Change-Id: I47dacdcb8dab3ec0c0e611428bbeb7bc95711bab

--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_channel_fragment_header.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_channel_fragment_header.xml
@@ -25,8 +25,11 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toEndOf="@id/dtv_contents_channel_header_img"
+            android:layout_marginEnd="16dp"
+            android:maxLines="2"
             android:textColor="@color/white_text"
             android:textSize="@dimen/contents_detail_channel_txt_size"
+            android:ellipsize="end"
             android:textStyle="bold" />
     </RelativeLayout>
 
