--- a/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/tv_program_channel_list_item_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/tv_program_channel_list_item_layout.xml
@@ -1,28 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2018 NTT DOCOMO, INC. All Rights Reserved.
   -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/tv_program_ch_title_bg"
+    android:gravity="center"
+    android:orientation="horizontal">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/tv_program_channel_list_item_layout_content"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:background="@drawable/tv_program_ch_title_bg"
+        android:layout_gravity="center"
+        android:ellipsize="end"
         android:gravity="center"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/tv_program_channel_list_item_layout_content"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:ellipsize="end"
-            android:gravity="center_vertical"
-            android:maxLines="1"
-            android:layout_marginStart="@dimen/tv_program_list_ch_title_margin"
-            android:layout_marginEnd="@dimen/tv_program_list_ch_title_margin"
-            android:textSize="@dimen/tv_program_list_ch_title_text_size"
-            android:textColor="@color/tv_program_list_ch_title_text_color" />
-    </LinearLayout>
-</RelativeLayout>
+        android:maxLines="2"
+        android:layout_marginStart="@dimen/tv_program_list_ch_title_margin"
+        android:layout_marginEnd="@dimen/tv_program_list_ch_title_margin"
+        android:textSize="@dimen/tv_program_list_ch_title_text_size"
+        android:textColor="@color/tv_program_list_ch_title_text_color" />
+</LinearLayout>
