--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_fragment.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_fragment.xml
@@ -57,22 +57,26 @@
                 android:textColor="@color/white_text"
                 android:textSize="@dimen/contents_detail_contents_text_size" />
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="horizontal"
                 android:layout_marginTop="@dimen/contents_detail_contents_text_size">
 
                 <LinearLayout
                     android:id="@+id/dtv_content_detail_fragment_detail_area"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
+                    android:layout_weight="1"
+                    android:layout_gravity="center_vertical"
                     android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/dtv_contents_detail_fragment_channel_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:maxLines="1"
+                        android:ellipsize="end"
                         android:textColor="@color/contents_detail_schedule_detail_schedule_info"
                         android:textSize="@dimen/contents_detail_contents_text_size" />
 
@@ -83,18 +87,27 @@
                         android:textColor="@color/contents_detail_schedule_detail_schedule_info"
                         android:textSize="@dimen/contents_detail_contents_text_size" />
 
+                    <LinearLayout
+                        android:id="@+id/dtv_contents_detail_fragment_label_status_ll"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/contents_detail_clip_margin"
+                        android:orientation="horizontal" />
+
                     <com.nttdocomo.android.tvterminalapp.view.RatingBarLayout
                         android:id="@+id/dtv_contents_detail_fragment_rating"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:gravity="center_vertical"/>
+                        android:layout_marginTop="@dimen/contents_detail_clip_margin"
+                        android:gravity="center_vertical" />
                 </LinearLayout>
 
                 <RelativeLayout
+                    android:id="@+id/dtv_contents_detail_fragment_iv_area"
+                    android:layout_weight="3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true">
+                    android:layout_gravity="center_vertical">
 
                     <ImageView
                         android:id="@+id/dtv_contents_detail_fragment_rec_iv"
@@ -119,14 +132,7 @@
                         android:src="@mipmap/icon_circle_opacity_clip"
                         android:contentDescription="@null"/>
                 </RelativeLayout>
-            </RelativeLayout>
-
-            <LinearLayout
-                android:id="@+id/dtv_contents_detail_fragment_label_status_ll"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/contents_detail_clip_margin"
-                android:orientation="horizontal" />
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/dtv_contents_detail_fragment_detail_info"
