https://agile.apccloud.jp/jira/browse/DREM-2470
[実装](素材・レイアウトの最新化)レイアウト変更（一覧）
ローディング画像と取得失敗時の素材を最新化

Change-Id: Ia4ce2c0bd94de56d631c8dd52ec2efac74d5a370

--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout_recyclerview_item.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout_recyclerview_item.xml
@@ -10,7 +10,7 @@
         android:layout_height="@dimen/home_contents_thumbnail_height"
         android:layout_centerHorizontal="true"
         android:adjustViewBounds="true"
-        android:background="@color/home_item_contents_background_color"
+        android:src="@mipmap/loading_scroll"
         android:layout_marginEnd="@dimen/home_contents_thumbnail_right_padding"
         android:scaleType="fitCenter"
         android:contentDescription="@null"/>
