--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/channel_list_item.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/channel_list_item.xml
@@ -14,6 +14,7 @@
 		android:layout_marginEnd="@dimen/channel_list_thumbnail_margin_end"
 		android:layout_marginStart="@dimen/channel_list_thumbnail_margin_start_top"
 		android:layout_marginTop="@dimen/channel_list_thumbnail_margin_start_top"
+		android:src="@mipmap/loading_ch_mini"
 		android:visibility="gone" />
 
 	<TextView
