--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
@@ -62,6 +62,7 @@
                 android:id="@+id/dtv_contents_detail_main_layout_thumbnail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:src="@mipmap/loading_movie"
                 android:contentDescription="@string/contents_info_thumbnail_text"
                 android:scaleType="fitCenter" />
 
